// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDocLink view renders does not show create link as expected 1`] = `
<div
  className="button-group"
>
  <div
    className="button-group-create-resource"
  >
    <Tooltip
      content="You do not have the required permissions to take this action."
      zIndex={10001}
    >
      <div
        className="disable-tooltip"
      >
        <Button
          id="create-resource"
          isDisabled={true}
          isSmall={true}
          onClick={[MockFunction]}
          variant="primary"
        >
          does not show create link
        </Button>
      </div>
    </Tooltip>
  </div>
  <div
    className="button-group-doc-link"
  >
    <Button
      aria-describedby="launchWindow"
      component="a"
      href="https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/undefined/html/security/security#manage-security-policies"
      id="doc-link"
      isInline={true}
      target="doc"
      variant="link"
    >
      View documentation
    </Button>
  </div>
</div>
`;

exports[`createDocLink view renders show create link as expected 1`] = `
<div
  className="button-group"
>
  <div
    className="button-group-create-resource"
  >
    <Tooltip
      content="You do not have the required permissions to take this action."
      zIndex={10001}
    >
      <div
        className="disable-tooltip"
      >
        <Button
          id="create-resource"
          isDisabled={true}
          isSmall={true}
          onClick={[MockFunction]}
          variant="primary"
        >
          show create link
        </Button>
      </div>
    </Tooltip>
  </div>
  <div
    className="button-group-doc-link"
  >
    <Button
      aria-describedby="launchWindow"
      component="a"
      href="https://access.redhat.com/documentation/en-us/red_hat_advanced_cluster_management_for_kubernetes/undefined/html/security/security#manage-security-policies"
      id="doc-link"
      isInline={true}
      target="doc"
      variant="link"
    >
      View documentation
    </Button>
  </div>
</div>
`;
